--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -297,8 +297,12 @@ escidoc.syndication.ttl=${escidoc.syndication.ttl}
 escidoc.syndication.feeds.xml.path=${escidoc.syndication.feeds.xml.path}
 escidoc.syndication.service.url=${escidoc.syndication.service.url}
 
+#Yearbook
 escidoc.pubman.yearbook.content-model.id=${escidoc.pubman.yearbook.content-model.id}
 escidoc.pubman.yearbook.context.id=${escidoc.pubman.yearbook.context.id}
+
+#JUS-SSRN contexts
+escidoc.pubman.instance.ssrn_contexts=${escidoc.pubman.instance.ssrn_contexts}
 
 #Url or path to an image that is displayed as logo on all Pubman Pages.
 escidoc.pubman.logo.url=${escidoc.pubman.logo.url}
