--- a/common_services/batchprocessmanager/pom.xml
+++ b/common_services/batchprocessmanager/pom.xml
@@ -69,7 +69,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.56</version>
+			<version>1.1.66-SNAPSHOT</version>
 			<type>ejb</type>
 			<scope>provided</scope>
 		</dependency>
