Resolved [PUBMAN-2443] - Presentation of PIDs on Pubman View Item Page Resolved Metadata-Fetch - [PUBMAN-2439] - PubMed Central Fetch doesn't work properly Yearbook export is limited to the candidates section BugFix for updates on NULL-Lists
Former-commit-id: 9bf9d19315acab9d72771c3c61d76fc889b2dcb5

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -286,6 +286,12 @@ escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.styl
 escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
 escidoc.transformation.marc.stylesheet.filename=${escidoc.transformation.marc.stylesheet.filename}
 escidoc.transformation.marc.configuration.filename=${escidoc.transformation.marc.configuration.filename}
+escidoc.transformation.pmc2escidoc_publication_item.stylesheet.filename=${escidoc.transformation.pmc2escidoc_publication_item.stylesheet.filename}
+escidoc.transformation.pmc2escidoc_publication_component.stylesheet.filename=${escidoc.transformation.pmc2escidoc_publication_component.stylesheet.filename}
+escidoc.transformation.bmc2escidoc_publication_item.stylesheet.filename=${escidoc.transformation.bmc2escidoc_publication_item.stylesheet.filename}
+escidoc.transformation.bmc2escidoc_publication_component.stylesheet.filename=${escidoc.transformation.bmc2escidoc_publication_component.stylesheet.filename}
+escidoc.transformation.arxiv2escidoc_publication_item.stylesheet.filename=${escidoc.transformation.arxiv2escidoc_publication_item.stylesheet.filename}
+escidoc.transformation.arxiv2escidoc_publication_component.stylesheet.filename=${escidoc.transformation.arxiv2escidoc_publication_component.stylesheet.filename}
 
 escidoc.report.indesign.namespace=${escidoc.report.indesign.namespace}
 
