--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -437,6 +437,7 @@
 										<versionRange>[1.1.3,)</versionRange>
 										<goals>
 											<goal>generate</goal>
+											<goal>generate-liverebel-xml</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
