PID-Handle: /item/$1/component/$2/$3 - $1 replaced by escidoc-item-id - $2 replaced by escidoc-component-id - $3 replaced by component-file-name
Former-commit-id: 12e3081f4e472c7759edea3c2f64e98919190cbe

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -595,7 +595,7 @@
 		<!-- URL of this PubMan instance -->
 		<escidoc.pubman.instance.context.path>/pubman</escidoc.pubman.instance.context.path>
 		<escidoc.pubman.item.pattern>/item/$1</escidoc.pubman.item.pattern>
-		<escidoc.pubman.component.pattern>/viewComponentPage.jsp?componentId=$1</escidoc.pubman.component.pattern>
+		<escidoc.pubman.component.pattern>/item/$1/component/$2/$3</escidoc.pubman.component.pattern>
 		<!-- Seal-Number of this PubMan instance -->
 		<escidoc.pubman.instance.seal_number/>
 		<!-- Links from PubMan -->
