PID-Handle: /item/$1/component/$2/$3 - $1 replaced by escidoc-item-id - $2 replaced by escidoc-component-id - $3 replaced by component-file-name

--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -591,8 +591,8 @@
 		<escidoc.pubman_presentation.disable.view_revisions>false</escidoc.pubman_presentation.disable.view_revisions>
 		<!-- URL of this PubMan instance -->
 		<escidoc.pubman.instance.url>http://localhost:8080/pubman</escidoc.pubman.instance.url>
-		<escidoc.pubman.item.pattern>/viewItemPage.jsp?itemId=$1</escidoc.pubman.item.pattern>
-		<escidoc.pubman.component.pattern>/viewComponentPage.jsp?componentId=$1</escidoc.pubman.component.pattern>
+		<escidoc.pubman.item.pattern>/item/$1</escidoc.pubman.item.pattern>
+		<escidoc.pubman.component.pattern>/item/$1/component/$2/$3</escidoc.pubman.component.pattern>
 		<!-- Seal-Number of this PubMan instance -->
 		<escidoc.pubman.instance.seal_number/>
 		<!-- URL of the FIZ framework instance -->
