PIDProviderMock noved, xml identing in handler objects added

--- a/common_services/tools/pid_migration/src/main/resources/log4j.properties
+++ b/common_services/tools/pid_migration/src/main/resources/log4j.properties
@@ -26,9 +26,9 @@
 # Set root category priority to ERROR and set no appender
 log4j.rootLogger=INFO, MyFileAppender, MyConsoleAppender
 
-log4j.logger.test=DEBUG, MyFileAppender
+log4j.logger.test=INFO, MyFileAppender
 log4j.additivity.test=false
-log4j.logger.de.mpg.escidoc=DEBUG, MyFileAppender, MyConsoleAppender
+log4j.logger.de.mpg.escidoc=INFO, MyFileAppender, MyConsoleAppender
 log4j.additivity.de.mpg.escidoc=false
 
 log4j.appender.MyConsoleAppender=org.apache.log4j.ConsoleAppender
@@ -38,5 +38,5 @@ log4j.appender.MyConsoleAppender.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p 
 log4j.appender.MyFileAppender=org.apache.log4j.FileAppender
 log4j.appender.MyFileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.MyFileAppender.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%F] %m%n
-log4j.appender.MyFileAppender.File=target/pidmigration.log
+log4j.appender.MyFileAppender.File=test/pidmigration.log
 log4j.appender.MyFileAppender.append=false
