Resolved [PUBMAN-2419] - Adapt BibTeX Export Resolved [PUBMAN-2439] - PubMed Central Fetch doesn't work properly * Fulltext included via Apache FOP (generated from OAIPMH-Fulltext) BibTex-Import is now changeable when running (see property: escidoc.transformation.bibtex.class)

--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -735,6 +735,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- import-source -->
 		<escidoc.import.sources.xml>resources/sources.xml</escidoc.import.sources.xml>
+		<!-- Transformation implementing classes-->
+		<escidoc.transformation.bibtex.class>de.mpg.escidoc.services.transformation.transformations.commonPublicationFormats.Bibtex</escidoc.transformation.bibtex.class>
 		<!-- Transformation stylesheets -->
 		<escidoc.transformation.endnote.ice.stylesheet.filename>transformations/commonPublicationFormats/xslt/endnoteicexml2escidoc.xsl</escidoc.transformation.endnote.ice.stylesheet.filename>
 		<escidoc.transformation.endnote.stylesheet.filename>transformations/commonPublicationFormats/xslt/endnotexml2escidoc.xsl</escidoc.transformation.endnote.stylesheet.filename>
