--- a/common_services/transformation/src/test/resources/pubman.properties
+++ b/common_services/transformation/src/test/resources/pubman.properties
@@ -8,6 +8,9 @@ escidoc.pubman.root.organisation.id=${escidoc.pubman.root.organisation.id}
 
 escidoc.cone.service.url=${escidoc.cone.service.url}
 
+<!-- Transformation implementing classes-->
+escidoc.transformation.bibtex.class=${escidoc.transformation.bibtex.class}
+
 # Transformation stylesheets
 escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet.filename}
 escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
