--- a/common_services/transformation/src/test/resources/transformation.properties
+++ b/common_services/transformation/src/test/resources/transformation.properties
@@ -5,6 +5,9 @@ escidoc.framework_access.content-model.id.publication=${escidoc.framework_access
 # CoNE service URL
 escidoc.cone.service.url=${escidoc.cone.service.url}
 
+<!-- Transformation implementing classes-->
+escidoc.transformation.bibtex.class=${escidoc.transformation.bibtex.class}
+
 # Transformation stylesheets
 escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet}
 escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.zfn.filename}
