--- a/common_services/dataacquisition/pom.xml
+++ b/common_services/dataacquisition/pom.xml
@@ -212,5 +212,22 @@
 			<artifactId>commons-httpclient</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.fop</groupId>
+			<artifactId>fop</artifactId>
+			<version>1.1</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.xmlgraphics</groupId>
+			<artifactId>xmlgraphics-commons</artifactId>
+			<type>jar</type>
+		<version>1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache</groupId>
+			<artifactId>batik</artifactId>
+			<version>1.7</version>
+		</dependency>
 	</dependencies>
 </project>
