--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -271,6 +271,9 @@ escidoc.pidcache.user.password=${escidoc.pidcache.user.password}
 # MAB transformation property pointing to a directory where all fulltexts are stored.
 escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.content.url.prefix}
 
+# Transformation - instantiated BibTex-Class
+escidoc.transformation.bibtex.class=${escidoc.transformation.bibtex.class}
+
 # Transformation stylesheets
 escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet.filename}
 escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
@@ -288,8 +291,10 @@ escidoc.transformation.marc.stylesheet.filename=${escidoc.transformation.marc.st
 escidoc.transformation.marc.configuration.filename=${escidoc.transformation.marc.configuration.filename}
 escidoc.transformation.pmc2escidoc_publication_item.stylesheet.filename=${escidoc.transformation.pmc2escidoc_publication_item.stylesheet.filename}
 escidoc.transformation.pmc2escidoc_publication_component.stylesheet.filename=${escidoc.transformation.pmc2escidoc_publication_component.stylesheet.filename}
+escidoc.transformation.pmc_fulltext_xml2pmc_fulltext_xslfo.stylesheet.filename=${escidoc.transformation.pmc_fulltext_xml2pmc_fulltext_xslfo.stylesheet.filename}
 escidoc.transformation.bmc2escidoc_publication_item.stylesheet.filename=${escidoc.transformation.bmc2escidoc_publication_item.stylesheet.filename}
 escidoc.transformation.bmc2escidoc_publication_component.stylesheet.filename=${escidoc.transformation.bmc2escidoc_publication_component.stylesheet.filename}
+escidoc.transformation.bmc_fulltext_xml2bmc_fulltext_html.stylesheet.filename=${escidoc.transformation.bmc_fulltext_xml2bmc_fulltext_html.stylesheet.filename}
 escidoc.transformation.arxiv2escidoc_publication_item.stylesheet.filename=${escidoc.transformation.arxiv2escidoc_publication_item.stylesheet.filename}
 escidoc.transformation.arxiv2escidoc_publication_component.stylesheet.filename=${escidoc.transformation.arxiv2escidoc_publication_component.stylesheet.filename}
 
