--- a/common_services/dataacquisition/pom.xml
+++ b/common_services/dataacquisition/pom.xml
@@ -221,13 +221,20 @@
 		<dependency>
 			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>xmlgraphics-commons</artifactId>
+			<version>1.5</version>
 			<type>jar</type>
-		<version>1.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache</groupId>
 			<artifactId>batik</artifactId>
 			<version>1.7</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>avalon-framework</groupId>
+			<artifactId>avalon-framework-impl</artifactId>
+			<version>4.2.0</version>
+			<type>jar</type>
 		</dependency>
 	</dependencies>
 </project>
