started again replacing all dummy pids

--- a/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
+++ b/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
@@ -1,3 +1,4 @@
 escidoc.pid.pidcache.service.url=http://localhost:8080/pidcache/handle
 escidoc.pidcache.user.name=pid_manager
 escidoc.pidcache.user.password=wannapid
+escidoc.pidprovider.class=de.mpg.escidoc.handler.PIDProviderMock
