--- a/common_services/dataacquisition_ear/pom.xml
+++ b/common_services/dataacquisition_ear/pom.xml
@@ -31,18 +31,18 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.66-SNAPSHOT</version>
+		<version>1.0.66</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>dataacquisition_ear</artifactId>
 	<packaging>ear</packaging>
 	<name>dataacquisition_ear</name>
-	<version>1.0.62-SNAPSHOT</version>
+	<version>1.0.62</version>
 	<scm>
-	  <connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/dataacquisition_ear</connection>
-    <developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/dataacquisition_ear</developerConnection>
-    <url>https://subversion.mpdl.mpg.de/repos/common/dataacquisition_ear</url>
+	  <connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.66/dataacquisition_ear</connection>
+    <developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.66/dataacquisition_ear</developerConnection>
+    <url>https://subversion.mpdl.mpg.de/repos/common/dataacquisition_ear/tags/common_services-1.0.66/dataacquisition_ear</url>
   </scm>
 	<build>
 		<plugins>
@@ -304,7 +304,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.3.11-SNAPSHOT</version>
+			<version>1.3.11</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -358,14 +358,14 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>dataacquisition</artifactId>
-			<version>1.0.62-SNAPSHOT</version>
+			<version>1.0.62</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>dataacquisition_presentation</artifactId>
-			<version>1.0.62-SNAPSHOT</version>
+			<version>1.0.62</version>
 			<type>war</type>
 			<scope>compile</scope>
 		</dependency>
@@ -373,7 +373,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>transformation</artifactId>
-			<version>1.0.54-SNAPSHOT</version>
+			<version>1.0.54</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
@@ -404,20 +404,20 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.69-SNAPSHOT</version>
+			<version>1.0.69</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>cone_presentation</artifactId>
-			<version>1.2.25-SNAPSHOT</version>
+			<version>1.2.25</version>
 			<scope>compile</scope>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>cone</artifactId>
-			<version>1.2.25-SNAPSHOT</version>
+			<version>1.2.25</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
