--- a/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
+++ b/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
@@ -1,4 +1,5 @@
 escidoc.pid.pidcache.service.url=http://localhost:8080/pidcache/handle
 escidoc.pidcache.user.name=pid_manager
 escidoc.pidcache.user.password=wannapid
+escidoc.pidcache.dummy.url=http://pubman.mpdl.mpg.de/pubman/faces/PidNotResolved.jsp?id=
 escidoc.pidprovider.class=de.mpg.escidoc.handler.PIDProviderMock
