--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -32,7 +32,7 @@
 	<groupId>de.mpg.escidoc.pubman</groupId>
 	<artifactId>pubman</artifactId>
 	<packaging>pom</packaging>
-	<version>7.3.0-SNAPSHOT</version>
+	<version>7.3.0</version>
 	<name>pubman</name>
 	<url>http://pubman.mpdl.mpg.de/software</url>
 	<description>
@@ -224,9 +224,9 @@
 		<module>pubman_installer</module>
 	</modules>
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/pubman/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.3.0</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.3.0</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.3.0</url>
 	</scm>
 	<repositories>
 		<repository>
@@ -597,7 +597,7 @@
 		<escidoc.pubman.item.pattern>/item/$1</escidoc.pubman.item.pattern>
 		<escidoc.pubman.component.pattern>/item/$1/component/$2/$3</escidoc.pubman.component.pattern>
 		<!-- Seal-Number of this PubMan instance -->
-		<escidoc.pubman.instance.seal_number/>
+		<escidoc.pubman.instance.seal_number />
 		<!-- Links from PubMan -->
 		<escidoc.pubman.policy.url>http://colab.mpdl.mpg.de/mediawiki/MPG.PuRe_Impressum</escidoc.pubman.policy.url>
 		<escidoc.pubman.contact.url>http://colab.mpdl.mpg.de/mediawiki/PubMan_Support</escidoc.pubman.contact.url>
@@ -796,14 +796,14 @@
 		<escidoc.transformation.report.sortorder.filename>transformations/reports/conf/reportSortOrder.xml</escidoc.transformation.report.sortorder.filename>
 		<escidoc.transformation.marc.stylesheet.filename>transformations/standardFormats/xslt/marc.xsl</escidoc.transformation.marc.stylesheet.filename>
 		<escidoc.transformation.marc.configuration.filename>transformations/standardFormats/conf/marc.properties</escidoc.transformation.marc.configuration.filename>
-		<escidoc.transformation.pmc2escidoc_publication_item.stylesheet.filename></escidoc.transformation.pmc2escidoc_publication_item.stylesheet.filename>
-		<escidoc.transformation.pmc2escidoc_publication_component.stylesheet.filename></escidoc.transformation.pmc2escidoc_publication_component.stylesheet.filename>
-		<escidoc.transformation.pmc_fulltext_xml2pmc_fulltext_xslfo.stylesheet.filename></escidoc.transformation.pmc_fulltext_xml2pmc_fulltext_xslfo.stylesheet.filename>
-		<escidoc.transformation.bmc2escidoc_publication_item.stylesheet.filename></escidoc.transformation.bmc2escidoc_publication_item.stylesheet.filename>
-		<escidoc.transformation.bmc2escidoc_publication_component.stylesheet.filename></escidoc.transformation.bmc2escidoc_publication_component.stylesheet.filename>
-		<escidoc.transformation.bmc_fulltext_xml2bmc_fulltext_html.stylesheet.filename></escidoc.transformation.bmc_fulltext_xml2bmc_fulltext_html.stylesheet.filename>
-		<escidoc.transformation.arxiv2escidoc_publication_item.stylesheet.filename></escidoc.transformation.arxiv2escidoc_publication_item.stylesheet.filename>
-		<escidoc.transformation.arxiv2escidoc_publication_component.stylesheet.filename></escidoc.transformation.arxiv2escidoc_publication_component.stylesheet.filename>
+		<escidoc.transformation.pmc2escidoc_publication_item.stylesheet.filename />
+		<escidoc.transformation.pmc2escidoc_publication_component.stylesheet.filename />
+		<escidoc.transformation.pmc_fulltext_xml2pmc_fulltext_xslfo.stylesheet.filename />
+		<escidoc.transformation.bmc2escidoc_publication_item.stylesheet.filename />
+		<escidoc.transformation.bmc2escidoc_publication_component.stylesheet.filename />
+		<escidoc.transformation.bmc_fulltext_xml2bmc_fulltext_html.stylesheet.filename />
+		<escidoc.transformation.arxiv2escidoc_publication_item.stylesheet.filename />
+		<escidoc.transformation.arxiv2escidoc_publication_component.stylesheet.filename />
 		<escidoc.report.indesign.namespace>http://ns.adobe.com/AdobeInDesign/4.0/</escidoc.report.indesign.namespace>
 		<escidoc.pubman.genres.configuration>Genres.xml</escidoc.pubman.genres.configuration>
 		<!-- AA -->
