--- a/pubman/pubman_presentation/pom.xml
+++ b/pubman/pubman_presentation/pom.xml
@@ -29,19 +29,19 @@
 	<parent>
 		<artifactId>pubman</artifactId>
 		<groupId>de.mpg.escidoc.pubman</groupId>
-		<version>7.3.0-SNAPSHOT</version>
+		<version>7.3.0</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.pubman</groupId>
 	<artifactId>pubman_presentation</artifactId>
 	<name>pubman_presentation</name>
-	<version>7.3.0-SNAPSHOT</version>
+	<version>7.3.0</version>
 	<packaging>war</packaging>
 
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman/pubman_presentation</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/trunk/pubman/pubman_presentation</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/pubman/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.3.0/pubman_presentation</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.3.0/pubman_presentation</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/pubman/tags/pubman-7.3.0/pubman</url>
 	</scm>
 
 	<build>
@@ -126,7 +126,7 @@
 	<profiles>
 		<profile>
 			<id>env-development</id>
-			<properties></properties>
+			<properties />
 			<build>
 			<plugins>
 			<plugin>
@@ -156,10 +156,10 @@
 								</goals>
 								<configuration>
 									<tasks>
-										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
-										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
-										<copy file="${project.basedir}/src/main/webapp/home/mpg/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
-										<copy file="${project.basedir}/src/main/webapp/home/mpg/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf" />
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf" />
+										<copy file="${project.basedir}/src/main/webapp/home/mpg/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf" />
+										<copy file="${project.basedir}/src/main/webapp/home/mpg/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf" />
 										<!--  delete dir="${project.build.directory}/main/webapp/home/mpg"/-->
 									</tasks>
 								</configuration>
@@ -174,7 +174,7 @@
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
-			<properties></properties>
+			<properties />
 			<build>
 			<plugins>
 			<plugin>
@@ -204,10 +204,10 @@
 								</goals>
 								<configuration>
 									<tasks>
-										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
-										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
-										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
-										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf" />
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf" />
+										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf" />
+										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf" />
 										<!--  delete dir="${project.build.directory}/main/webapp/home/opensource"/-->
 									</tasks>
 								</configuration>
@@ -219,7 +219,7 @@
 		</profile>
 		<profile>
 			<id>env-production-nims</id>
-			<properties></properties>
+			<properties />
 			<build>
 			<plugins>
 			<plugin>
@@ -249,10 +249,10 @@
 								</goals>
 								<configuration>
 									<tasks>
-										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
-										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
-										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf"/>
-										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf"/>
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf" />
+										<delete file="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf" />
+										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedIn.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedIn.jspf" />
+										<copy file="${project.basedir}/src/main/webapp/home/opensource/StartPageLoggedOut.jspf" tofile="${project.basedir}/src/main/webapp/home/StartPageLoggedOut.jspf" />
 										<!--  delete dir="${project.build.directory}/main/webapp/home/opensource"/-->
 									</tasks>
 								</configuration>
@@ -268,7 +268,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
 			<artifactId>pubman_logic</artifactId>
-			<version>7.3.0-SNAPSHOT</version>
+			<version>7.3.0</version>
 			<scope>provided</scope>
 		</dependency>	
 		<dependency>
