--- a/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
+++ b/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
@@ -1,5 +1,10 @@
-escidoc.pid.pidcache.service.url=http://localhost:8080/pidcache/handle
+escidoc.pidcache.service.url=http://dev-pubman.mpdl.mpg.de:8080/pidcache/handle
 escidoc.pidcache.user.name=pid_manager
 escidoc.pidcache.user.password=wannapid
-escidoc.pidcache.dummy.url=http://pubman.mpdl.mpg.de/pubman/faces/PidNotResolved.jsp?id=
 escidoc.pidprovider.class=de.mpg.escidoc.handler.PIDProviderMock
+
+escidoc.pubman.instance.url=http://dev-pubman.mpdl.mpg.de
+escidoc.pubman.instance.context.path=/pubman
+escidoc.pubman.item.pattern=/item/$1
+escidoc.pubman.component.pattern=/item/$1/component/$2/$3
+
