Adjusted [PUBMAN-2439] - PubMed Central Fetch doesn't work properly
Former-commit-id: a03dcf0558c6fe41584889a7d8732190edf75986

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -779,6 +779,8 @@
 		<escidoc.pid.service.update.path>/write/modify</escidoc.pid.service.update.path>
 		<escidoc.pid.service.search.path>/read/search</escidoc.pid.service.search.path>
 		<escidoc.transformation.mab.content.url.prefix>http://migration-coreservice.mpdl.mpg.de/import/linguistic_literature/</escidoc.transformation.mab.content.url.prefix>
+		<!-- Dataaquisition - Apache FOP configuration file -->
+		<escidoc.dataaquisition.resources.fop.configuration></escidoc.dataaquisition.resources.fop.configuration>
 		<!-- Transformation implementing classes-->
 		<escidoc.transformation.bibtex.class>de.mpg.escidoc.services.transformation.transformations.commonPublicationFormats.Bibtex</escidoc.transformation.bibtex.class>
 		<!-- Transformation stylesheets -->
@@ -879,7 +881,7 @@
 				</plugins>
 			</build>
 			<properties>
-			    	<escidoc.syndication.service.url>http://localhost:8080/syndication</escidoc.syndication.service.url>
+			    <escidoc.syndication.service.url>http://localhost:8080/syndication</escidoc.syndication.service.url>
 				<escidoc.cone.service.url>http://localhost:8080/cone/</escidoc.cone.service.url>
 				<escidoc.import.database.name>../server/default/data/hypersonic/localDB</escidoc.import.database.name>
 				<escidoc.import.surveyor.interval>10</escidoc.import.surveyor.interval>
