--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -271,6 +271,9 @@ escidoc.pidcache.user.password=${escidoc.pidcache.user.password}
 # MAB transformation property pointing to a directory where all fulltexts are stored.
 escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.content.url.prefix}
 
+# Dataaquisition - Apache FOP configuration file
+escidoc.dataaquisition.resources.fop.configuration=${escidoc.dataaquisition.resources.fop.configuration}
+
 # Transformation - instantiated BibTex-Class
 escidoc.transformation.bibtex.class=${escidoc.transformation.bibtex.class}
 
