Added Dependencies for integration-tests in dataaquisition_ear

--- a/common_services/dataacquisition_ear/pom.xml
+++ b/common_services/dataacquisition_ear/pom.xml
@@ -153,6 +153,26 @@
 							<artifactId>cone</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
+						<jarModule>
+							<groupId>org.apache.fop</groupId>
+							<artifactId>fop</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
+						<jarModule>
+							<groupId>org.apache.xmlgraphics</groupId>
+							<artifactId>xmlgraphics-commons</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
+						<jarModule>
+							<groupId>org.apache</groupId>
+							<artifactId>batik</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
+						<jarModule>
+							<groupId>org.apache.avalon</groupId>
+							<artifactId>avalon-framework</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
 					</modules>
 				</configuration>
 			</plugin>
