--- a/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
+++ b/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
@@ -1,10 +1,16 @@
+# pidcache server configuration - getting the PIDs from
 escidoc.pidcache.service.url=http://dev-pubman.mpdl.mpg.de:8080/pidcache/handle
 escidoc.pidcache.user.name=pid_manager
 escidoc.pidcache.user.password=wannapid
 escidoc.pidprovider.class=de.mpg.escidoc.handler.PIDProviderMock
-
+# the pubman instance registering handles for
 escidoc.pubman.instance.url=http://dev-pubman.mpdl.mpg.de
 escidoc.pubman.instance.context.path=/pubman
 escidoc.pubman.item.pattern=/item/$1
 escidoc.pubman.component.pattern=/item/$1/component/$2/$3
-
+# triplestore database configuration - needed for item component mapping
+triplestore.datasource.url=jdbc:postgresql://localhost:5433/riTriples
+triplestore.datasource.driverClassName=org.postgresql.Driver
+triplestore.datasource.username=postgres
+triplestore.datasource.password=postgres
+triplestore.datasource.table=t4
