statistic stuff added

--- a/common_services/tools/pid_migration/pom.xml
+++ b/common_services/tools/pid_migration/pom.xml
@@ -149,5 +149,11 @@
 			<version>8.7</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.0-801.jdbc4</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
