using variables for credentials

--- a/common_services/reporting/src/test/resources/pubman.properties
+++ b/common_services/reporting/src/test/resources/pubman.properties
@@ -4,8 +4,8 @@
 #escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
 
 
-framework.admin.username=roland
-framework.admin.password=Htpw55
+framework.admin.username=${framework.admin.username}
+framework.admin.password=${framework.admin.password}
 
 escidoc.pubman.instance.url=http://pubman.mpdl.mpg.de
 escidoc.framework_access.framework.url=http://coreservice.mpdl.mpg.de
