--- a/common_services/aa_presentation/pom.xml
+++ b/common_services/aa_presentation/pom.xml
@@ -31,19 +31,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.67-SNAPSHOT</version>
+		<version>1.0.67</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>aa_presentation</artifactId>
 	<packaging>war</packaging>
 	<name>aa_presentation</name>
-	<version>0.2.5-SNAPSHOT</version>
+	<version>0.2.5</version>
 	
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/aa_presentation</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/aa_presentation</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.67/aa_presentation</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.67/aa_presentation</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.67/aa_presentation</url>
 	</scm>
 	
 	<build>	  
@@ -159,14 +159,14 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>aa_logic</artifactId>
-			<version>0.2.5-SNAPSHOT</version>
+			<version>0.2.5</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.67-SNAPSHOT</version>
+			<version>1.1.67</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
