PreHandler keeps the complete history now

--- a/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
+++ b/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
@@ -1,5 +1,6 @@
 # pidcache server configuration - getting the PIDs from
-escidoc.pidcache.service.url=http://dev-pubman.mpdl.mpg.de:8080/pidcache/handle
+escidoc.pidcache.service.url=http://qa-pubman.mpdl.mpg.de:8080/pidcache/handle
+escidoc.pidcache.server=qa-pubman.mpdl.mpg.de
 escidoc.pidcache.user.name=pid_manager
 escidoc.pidcache.user.password=wannapid
 escidoc.pidprovider.class=de.mpg.escidoc.handler.PIDProviderMock
@@ -9,7 +10,7 @@ escidoc.pubman.instance.context.path=/pubman
 escidoc.pubman.item.pattern=/item/$1
 escidoc.pubman.component.pattern=/item/$1/component/$2/$3
 # triplestore database configuration - needed for item component mapping
-triplestore.datasource.url=jdbc:postgresql://localhost:5433/riTriples
+triplestore.datasource.url=jdbc:postgresql://qa-coreservice.mpdl.mpg.de:5432/riTriples
 triplestore.datasource.driverClassName=org.postgresql.Driver
 triplestore.datasource.username=postgres
 triplestore.datasource.password=postgres
