adding <prop:pid> element

--- a/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
+++ b/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
@@ -3,7 +3,7 @@ escidoc.pidcache.service.url=http://qa-pubman.mpdl.mpg.de:8080/pidcache/handle
 escidoc.pidcache.server=qa-pubman.mpdl.mpg.de
 escidoc.pidcache.user.name=pid_manager
 escidoc.pidcache.user.password=wannapid
-escidoc.pidprovider.class=de.mpg.escidoc.handler.PIDProviderMock
+escidoc.pidprovider.class=de.mpg.escidoc.handler.PIDProvider
 # the pubman instance registering handles for
 escidoc.pubman.instance.url=http://n107.mucam.mpg.de:8080
 escidoc.pubman.instance.context.path=/pubman
